--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rnmapbox/maps": "^10.1.31",
     "@turf/helpers": "^7.1.0",
     "expo": "^51.0.32",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,13 +34,14 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
