--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@ web-build/
 # expo router
 expo-env.d.ts
 **/.env
-app.json
 eas.json
+app.json
+
 
 .env
 
@@ -26,4 +27,4 @@ android
 .DS_Store
 
 # Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+.metro-health-check*.env
