--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rnmapbox/maps": "^10.1.31",
     "@turf/helpers": "^7.1.0",
-    "expo": "^51.0.32",
+    "expo": "~51.0.35",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
@@ -45,11 +45,13 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~18.2.79",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
