--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "^3.5.23",
@@ -43,9 +44,10 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-video": "^6.6.4",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "expo-linear-gradient": "~13.0.2"
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
