--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poynt",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -33,19 +33,18 @@
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.36",
+    "expo": "~51.0.39",
     "expo-auth-session": "~5.5.2",
-    "expo-av": "~14.0.7",
     "expo-camera": "^15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.27",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-random": "~14.0.1",
-    "expo-router": "^3.5.23",
+    "expo-router": "^3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -61,10 +60,10 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.11.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-video": "^6.6.4",
+    "react-native-video": "^6.10.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.8.6",
     "react-redux": "^9.1.2"
@@ -74,12 +73,13 @@
     "@types/base-64": "^1.0.2",
     "@types/react": "~18.2.79",
     "@types/react-dom": "^18.3.0",
+    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
-    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
