--- a/package.json
+++ b/package.json
@@ -13,18 +13,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@heliofi/checkout-react": "^2.1.1",
-    "@mapbox/search-js-react": "^1.0.0-beta.22",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-firebase/app": "^21.0.0",
-    "@react-native-firebase/auth": "^21.0.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@rnmapbox/maps": "^10.1.31",
     "@shopify/react-native-skia": "1.2.3",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.3",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.3",
@@ -49,7 +44,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "okto-sdk-react-native": "^0.3.0",
+    "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -58,21 +53,22 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-video": "^6.10.2",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6",
+    "react-native-webview": "13.8.6",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/base-64": "^1.0.2",
     "@types/react": "~18.2.79",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "~18.2.25",
     "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
