--- a/eas.json
+++ b/eas.json
@@ -13,13 +13,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_API_KEY": "{{secrets.EXPO_PUBLIC_API_KEY}}",
-        "EXPO_PUBLIC_CODE": "{{secrets.EXPO_PUBLIC_CODE}}",
-        "EXPO_PUBLIC_FOURSQUARE_API_KEY": "{{secrets.EXPO_PUBLIC_FOURSQUARE_API_KEY}}",
-        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID}}",
-        "EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID}}",
-        "EXPO_PUBLIC_OKTO_CLIENT_API": "{{secrets.EXPO_PUBLIC_OKTO_CLIENT_API}}",
-        "EXPO_PUBLIC_RN_MAPCODE": "{{secrets.EXPO_PUBLIC_RN_MAPCODE}}"
+        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID}}"
       }
     },
     "preview": {
@@ -28,13 +22,7 @@
     "production": {
       "autoIncrement": true,
       "env": {
-        "EXPO_PUBLIC_API_KEY": "{{secrets.EXPO_PUBLIC_API_KEY}}",
-        "EXPO_PUBLIC_CODE": "{{secrets.EXPO_PUBLIC_CODE}}",
-        "EXPO_PUBLIC_FOURSQUARE_API_KEY": "{{secrets.EXPO_PUBLIC_FOURSQUARE_API_KEY}}",
-        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID}}",
-        "EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID}}",
-        "EXPO_PUBLIC_OKTO_CLIENT_API": "{{secrets.EXPO_PUBLIC_OKTO_CLIENT_API}}",
-        "EXPO_PUBLIC_RN_MAPCODE": "{{secrets.EXPO_PUBLIC_RN_MAPCODE}}"
+        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "{{secrets.EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID}}"
       }
     }
   },
