--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dynamic-labs/client": "^4.11.2",
+    "@dynamic-labs/react-hooks": "^4.11.2",
+    "@dynamic-labs/react-native-extension": "^4.11.2",
+    "@dynamic-labs/solana-extension": "^4.0.0-alpha.52",
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-clipboard/clipboard": "^1.14.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -23,8 +28,9 @@
     "@shopify/react-native-skia": "1.2.3",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.3",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.3",
-    "@solana/web3.js": "^1.98.0",
+    "@solana/web3.js": "^1.92.1",
     "@turf/helpers": "^7.1.0",
+    "assert": "^2.1.0",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
@@ -39,22 +45,29 @@
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-random": "~14.0.1",
-    "expo-router": "^3.5.24",
+    "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "https-browserify": "^1.0.0",
+    "metro": "0.80.12",
+    "metro-resolver": "0.80.12",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "query-string": "^9.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.5",
+    "react-native-crypto": "^2.2.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-qrcode-svg": "^6.3.2",
+    "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -62,20 +75,26 @@
     "react-native-video": "^6.10.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "stream-http": "^3.2.0",
+    "text-encoding": "^0.7.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/base-64": "^1.0.2",
+    "@types/lodash": "^4.17.16",
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
-    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-worklets-core": "^1.5.0",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
