--- a/package.json
+++ b/package.json
@@ -11,28 +11,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@dynamic-labs/client": "^4.11.2",
-    "@dynamic-labs/react-hooks": "^4.11.2",
-    "@dynamic-labs/react-native-extension": "^4.11.2",
-    "@dynamic-labs/solana-extension": "^4.0.0-alpha.52",
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@shopify/react-native-skia": "1.2.3",
-    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.3",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.3",
-    "@solana/web3.js": "^1.92.1",
     "@turf/helpers": "^7.1.0",
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "expo": "~51.0.39",
     "expo-auth-session": "~5.5.2",
@@ -84,6 +79,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/base-64": "^1.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.16",
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
